<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationsFinalProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="action_gotofavorites">Favorites</string>
    <string name="adress">Address</string>
    <string name="action_addtofavorites">Add to favorites</string>
    <string name="action_share">Share the location</string>
    <string name="near_by">Near By</string>
    <string name="by_name">By Name</string>
    <string name="enter_search">Enter Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_deleteall">Delete all</string>
    <string name="action_exit">Exit</string>
    <string name="action_gotomain">Main</string>
    <string name="name">name</string>
    <string name="distance">distance</string>
    <string name="type">type</string>
    <string name="delete_all_favorites">Delete all Favorites</string>
    <string name="km">Km</string>
    <string name="ml">Ml</string>
    <string name="which_distance_type_do_you_prefer_">Which distance type do you prefer?</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="shared_pref_file_name">sharedPrefFile</string>

</resources>
